# centurymetadata

./: CHANGELOG.md  LICENSE  Makefile  README.md  vars
examples/: EXAMPLES.md  centurytool.py
python/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
python/centurymetadata/: __init__.py  constants.py  decode.py  encode.py
python/centurymetadata/server/: server.py  setup.sh
python/tests/: test_decode.py  test_encode.py
templates/: README.md.src  constants.py.src  convert-src  index.html.src
web/: index.html
