[tool.poetry]
name = "centurymetadata"
version = "0.02"
description = "Encrypt, send, retrieve and decrypt centurymetadata.org files"
authors = ["Rusty Russell <rusty@rustcorp.com.au>"]
license = "MIT"
homepage = "https://centurymetadata.org/"
readme = "README.md"
repository = "https://github.com/rustyrussell/centurymetadata/"

[tool.poetry.dependencies]
python = ">=3.8"
pycryptodomex = ">=3.6"
secp256k1 = ">=0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
