[metadata]
name = centurymetadata
version = 0.0.2
author = Rusty Russell
author_email = rusty@rustcorp.com.au
description = Alpha version of centurymetadata
long_description = file: README.md
long_description_content_type = text/markdown
url = https://centurymetadata.org/
project_urls =
    Bug Tracker = https://github.com/rustyrussell/centurymetadata/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
